--- a/semana 4/Reproducible Pitch/p11.Rmd
+++ b/semana 4/Reproducible Pitch/p11.Rmd
@@ -19,7 +19,7 @@ widgets: bootstrap
 
 ### See the Regression Models Course Project  
 
-- URL: *https://github.com/sergio185/Developing-Data-Products/tree/master/semana%204*
+- URL: *https://github.com/sergio185/Developing-Data-Products/tree/master/semana%204/Reproducible%20Pitch*
 - Find here all the data that have been use for this presentation and also for the first part of the data Science Project: "First, you will create a Shiny application and deploy it on Rstudio's servers.Second, you will use Slidify or Rstudio Presenter to prepare a reproducible pitch presentation about your application."
 
 ### Find all details here
